--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
     <input type="text" id="sourceIn">
     <span id="targeOut"></span>
-    <script type="module" src="wcforge.js"></script>
+    <script type="module" src="./samples/wcforge.js"></script>
     <bindings>
         <binding source="#pic" event="onCaptured" target="#image" property="src" />
         <binding source="#pic" event="onCaptured" target="#myTodos" property="ownerimg" />
@@ -117,7 +117,7 @@
 
     </script>
 
-    <script src="bindings.js"></script>
+    <script src="./samples/bindings.js"></script>
 </body>
 
 </html>
