--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>TypeScript Web Component</title>
-    <link rel="stylesheet" href="//stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         crossorigin="anonymous" />
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/noUiSlider/14.6.0/nouislider.css"
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/14.6.0/nouislider.css"
         crossorigin="anonymous" />
 
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/@webcomponents/custom-elements@1.5.0/custom-elements.min.js"></script>
-    <style>
+    <script type="module" src="https://cdn.jsdelivr.net/npm/@vaadin/vaadin@20.0.6/vaadin.min.js"></script>
+<style>
         #rangeOut {
             color: rebeccapurple;
             background-color: greenyellow;
@@ -35,6 +36,8 @@
     <multi-item-selector id="selector2" keyProp="id" textProp="name" debug="true" selectedItems maxlength="3"
         direction="column" placeholder="Item Select kar le!!" data></multi-item-selector>
 
+ vaddin
+        <vaadin-combo-box placeholder="Placeholder" id="vaddin"></vaadin-combo-box>
     <br>
     <br>
     <br>
@@ -88,7 +91,9 @@
         <binding source="#range" event="input" target="#rangeOut" property="style.width" targrtFormat="{0}%" />
         <binding source="#range" event="input" target="#rangeOut" property="style.height" targrtFormat="{0}vh" />
         <binding source="#selector1" event="change" target="#selector2" property="selecteditems" object />
+        <binding source="#selector1" event="change" target="#vaddin" property="items" object />
 
+        
     </bindings>
     <script>
 
