--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/@webcomponents/custom-elements@1.5.0/custom-elements.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@vaadin/vaadin@22.0.0-alpha1/vaadin.min.js"></script>
+    <script type="module" src="https://cdn.jsdelivr.net/npm/@vaadin/vaadin@22.0.0-alpha1/vaadin.min.js"></script>
 <style>
         #rangeOut {
             color: rebeccapurple;
