--- a/examples/intro.html
+++ b/examples/intro.html
@@ -1,29 +1,31 @@
+
 <h1>Intro</h1>
 
 
 
+<div class="col-span-full sm:col-span-3 text-left">
+  <label for="sourceIn" class="text-sm">First name</label>
+  <input id="sourceIn" type="text" placeholder="First name" style="color: black;"
+  class="w-full rounded-md focus:ring focus:ring-opacity-75 dark:text-black-50 focus:dark:ring-violet-600 dark:border-gray-300">
+</div>
 
-<input type="text" id="sourceIn">  
 
+
+
+Your First Name is :
 <span id="targeOut">
-hello world
 </span>
 
 <bindings>
-
-    <binding>
-        <binding source="#sourceIn" event="keyup" target="#targeOut" property="innerHTML" />
-
-    </binding>
+  <binding source="#sourceIn" event="keyup" target="#targeOut" property="innerHTML" />
 </bindings>
 
-<pre><code class="language-html">
-    <bindings>
+<pre>
+  <code class="language-xml" class="text-right">
 
-        <binding>
-            <binding source="#sourceIn" event="keyup" target="#targeOut" property="innerHTML" />
-    
-        </binding>
-    </bindings>
-
-</code></pre>
+    <br />
+&nbsp;&nbsp; &nbsp;&lt;bindings&gt;<br />
+&nbsp;&nbsp; &nbsp;&lt;binding source=&quot;#sourceIn&quot; event=&quot;keyup&quot; target=&quot;#targeOut&quot; property=&quot;innerHTML&quot; /&gt;<br />
+&nbsp;&nbsp; &nbsp;&lt;/bindings&gt;
+</code>
+</pre>
