Migrated to bootstrap

--- a/examples/intro.html
+++ b/examples/intro.html
@@ -20,12 +20,10 @@ Your First Name is :
   <binding source="#sourceIn" event="keyup" target="#targeOut" property="innerHTML" />
 </bindings>
 
-<pre>
-  <code class="language-xml" class="text-right">
-
-    <br />
-&nbsp;&nbsp; &nbsp;&lt;bindings&gt;<br />
-&nbsp;&nbsp; &nbsp;&lt;binding source=&quot;#sourceIn&quot; event=&quot;keyup&quot; target=&quot;#targeOut&quot; property=&quot;innerHTML&quot; /&gt;<br />
-&nbsp;&nbsp; &nbsp;&lt;/bindings&gt;
+<pre class="language-html">
+  <code class="language-html">
+ &nbsp;&lt;bindings&gt;<br />
+ &nbsp;&lt;binding source=&quot;#sourceIn&quot; event=&quot;keyup&quot; target=&quot;#targeOut&quot; property=&quot;innerHTML&quot; /&gt;<br />
+ &nbsp;&lt;/bindings&gt;
 </code>
 </pre>
