--- a/index.html
+++ b/index.html
@@ -1,151 +1,96 @@
-<!doctype html>
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js"
-        integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>BindingJS A Microfront-end binding library</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/9000.0.1/themes/prism.min.css" integrity="sha512-/mZ1FHPkg6EKcxo0fKXF51ak6Cr2ocgDi5ytaTBjsQZIH/RNs6GF6+oId/vPe3eJB836T36nXwVh/WBl/cWT4w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/9000.0.1/plugins/line-numbers/prism-line-numbers.min.css" integrity="sha512-3/cdM9qaJ5lBlzRKqwhMw+ZcNCVonz66BO6HgJudG/P1azm9wFrru31SsBa4T4Ew1AOH8HfDXSWS6emWwPl42A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    html, body {
+      height: 100%;
+    }
+    .container-fluid {
+      display: flex;
+      flex-direction: column;
+      height: 100%;
+    }
+    .content {
+      flex: 1;
+    }
+  </style>
 </head>
-<script src="./bindings.js" async> </script>
-<script src="./js/prism.js" async></script>
-
 <body>
-    <div class="min-h-screen bg-gray-800 text-gray-100">
-        <div class="p-6 space-y-8">
-            <header class="container flex items-center justify-between h-16 px-4 mx-auto rounded bg-gray-900">
-                <a rel="noopener noreferrer" href="#" aria-label="Homepage">
-                    <h1> &lt;BindingJS/&gt;
-                    </h1>
-                    The Micro-frontend binding framework you need !!
-                </a>
-                <div class="items-center hidden space-x-8 lg:flex">
-                    <div class="space-x-4">
-                        <a rel="noopener noreferrer" href="https://github.com/darshanmarathe/bindingjs">Github</a>
-                        <a rel="noopener noreferrer" href="https://github.com/darshanmarathe">My profile</a>
-                        <a rel="noopener noreferrer" href="#">Learning</a>
-                    </div>
-                </div>
-                <button class="flex items-center justify-center p-2 lg:hidden">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"
-                        class="w-6 h-6 text-gray-50">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M4 6h16M4 12h16M4 18h16"></path>
-                    </svg>
-                </button>
-            </header>
-            <main>
-                <div class="container mx-auto space-y-16">
-                    <section class="grid gap-1  lg:grid-cols-2 xl:grid-cols-2">
-                        <aside class="w-full sm:w-60 bg-gray-900 text-gray-100 text-center">
-                            <nav class="space-y-8 text-sm">
-                                <div class="space-y-2">
-                                    <h2 class="text-sm font-semibold tracking-widest uppercase text-gray-400">Getting
-                                        Started</h2>
-                                    <div class="flex flex-col space-y-1 menu">
-                                        <a rel="noopener noreferrer"
-                                            href="./examples/Installation.html">Installation</a>
-                                        <a href="./examples/MF1.html">Microfrontend To Image</a>
-                                        <a rel="noopener noreferrer" href="#">Migrations</a>
-                                        <a rel="noopener noreferrer" href="#">Appearance</a>
-                                        <a rel="noopener noreferrer" href="#">Mamba UI</a>
-                                    </div>
-                                </div>
-                                <div class="space-y-2">
-                                    <h2 class="text-sm font-semibold tracking-widest uppercase text-gray-400">Dashboard
-                                    </h2>
-                                    <div class="flex flex-col space-y-1">
-                                        <a rel="noopener noreferrer" href="#">Header</a>
-                                        <a rel="noopener noreferrer" href="#">Drawer</a>
-                                        <a rel="noopener noreferrer" href="#">Page Title</a>
-                                        <a rel="noopener noreferrer" href="#">Menus</a>
-                                        <a rel="noopener noreferrer" href="#">Sidebar</a>
-                                        <a rel="noopener noreferrer" href="#">Footer</a>
-                                    </div>
-                                </div>
-                                <div class="space-y-2">
-                                    <h2 class="text-sm font-semibold tracking-widest uppercase text-gray-400">Pages</h2>
-                                    <div class="flex flex-col space-y-1">
-                                        <a rel="noopener noreferrer" href="#">Homepage</a>
-                                        <a rel="noopener noreferrer" href="#">Users</a>
-                                        <a rel="noopener noreferrer" href="#">Tools</a>
-                                        <a rel="noopener noreferrer" href="#">Settings</a>
-                                    </div>
-                                </div>
-                                <div class="space-y-2">
-                                    <h2 class="text-sm font-semibold tracking-widest uppercase text-gray-400">Misc</h2>
-                                    <div class="flex flex-col space-y-1">
-                                        <a rel="noopener noreferrer" href="#">Tutorials</a>
-                                        <a rel="noopener noreferrer" href="#">Changelog</a>
-                                    </div>
-                                </div>
-                            </nav>
-                        </aside>
+  <div class="container-fluid">
+    <!-- Header -->
+    <header class="row bg-primary text-white p-3">
+        <div class="col-12 d-flex justify-content-between align-items-center">
+          <div><h1> &lt;BindingJS/&gt;
+        </h1></div>
+          <div class="header-links">
 
-                        <div class="w-full md:w-8/10 bg-white p-4">
-                            <partial src="./examples/intro.html" id="view" onload="__initBindings" >   
-                                    <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
-                                      Click me
-                                    </button> </partial>
-                </div>
-                </section>
-
+            <a class="text-white ml-3" href="https://github.com/darshanmarathe/bindingjs">Github</a>
+            <a class="text-white ml-3" href="https://github.com/darshanmarathe">My profile</a>
+            <a class="text-white ml-3" href="#">Learning</a>
+          </div>
         </div>
-        </main>
-        <footer>
-            <div class="container flex justify-between p-6 mx-auto lg:p-8 bg-gray-900">
-                <a rel="noopener noreferrer" href="#" class="font-bold">Mamba</a>
-                <div class="flex space-x-2">
-                    <a aria-label="Email" rel="noopener noreferrer" href="#"
-                        class="flex items-center justify-center text-gray-400">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
-                            <path d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z"></path>
-                            <path d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z"></path>
-                        </svg>
-                    </a>
-                    <a aria-label="Twitter" rel="noopener noreferrer" href="#"
-                        class="flex items-center justify-center text-gray-400">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50" fill="currentColor" class="w-5 h-5">
-                            <path
-                                d="M 50.0625 10.4375 C 48.214844 11.257813 46.234375 11.808594 44.152344 12.058594 C 46.277344 10.785156 47.910156 8.769531 48.675781 6.371094 C 46.691406 7.546875 44.484375 8.402344 42.144531 8.863281 C 40.269531 6.863281 37.597656 5.617188 34.640625 5.617188 C 28.960938 5.617188 24.355469 10.21875 24.355469 15.898438 C 24.355469 16.703125 24.449219 17.488281 24.625 18.242188 C 16.078125 17.8125 8.503906 13.71875 3.429688 7.496094 C 2.542969 9.019531 2.039063 10.785156 2.039063 12.667969 C 2.039063 16.234375 3.851563 19.382813 6.613281 21.230469 C 4.925781 21.175781 3.339844 20.710938 1.953125 19.941406 C 1.953125 19.984375 1.953125 20.027344 1.953125 20.070313 C 1.953125 25.054688 5.5 29.207031 10.199219 30.15625 C 9.339844 30.390625 8.429688 30.515625 7.492188 30.515625 C 6.828125 30.515625 6.183594 30.453125 5.554688 30.328125 C 6.867188 34.410156 10.664063 37.390625 15.160156 37.472656 C 11.644531 40.230469 7.210938 41.871094 2.390625 41.871094 C 1.558594 41.871094 0.742188 41.824219 -0.0585938 41.726563 C 4.488281 44.648438 9.894531 46.347656 15.703125 46.347656 C 34.617188 46.347656 44.960938 30.679688 44.960938 17.09375 C 44.960938 16.648438 44.949219 16.199219 44.933594 15.761719 C 46.941406 14.3125 48.683594 12.5 50.0625 10.4375 Z">
-                            </path>
-                        </svg>
-                    </a>
-                    <a aria-label="Github" rel="noopener noreferrer" href="#"
-                        class="flex items-center justify-center text-gray-400">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24" class="w-6 h-6">
-                            <path
-                                d="M10.9,2.1c-4.6,0.5-8.3,4.2-8.8,8.7c-0.5,4.7,2.2,8.9,6.3,10.5C8.7,21.4,9,21.2,9,20.8v-1.6c0,0-0.4,0.1-0.9,0.1 c-1.4,0-2-1.2-2.1-1.9c-0.1-0.4-0.3-0.7-0.6-1C5.1,16.3,5,16.3,5,16.2C5,16,5.3,16,5.4,16c0.6,0,1.1,0.7,1.3,1c0.5,0.8,1.1,1,1.4,1 c0.4,0,0.7-0.1,0.9-0.2c0.1-0.7,0.4-1.4,1-1.8c-2.3-0.5-4-1.8-4-4c0-1.1,0.5-2.2,1.2-3C7.1,8.8,7,8.3,7,7.6C7,7.2,7,6.6,7.3,6 c0,0,1.4,0,2.8,1.3C10.6,7.1,11.3,7,12,7s1.4,0.1,2,0.3C15.3,6,16.8,6,16.8,6C17,6.6,17,7.2,17,7.6c0,0.8-0.1,1.2-0.2,1.4 c0.7,0.8,1.2,1.8,1.2,3c0,2.2-1.7,3.5-4,4c0.6,0.5,1,1.4,1,2.3v2.6c0,0.3,0.3,0.6,0.7,0.5c3.7-1.5,6.3-5.1,6.3-9.3 C22,6.1,16.9,1.4,10.9,2.1z">
-                            </path>
-                        </svg>
-                    </a>
-                </div>
-            </div>
-        </footer>
-    </div>
+      </header>
+
+    <div class="row flex-grow-1 content">
+      <!-- Sidebar (30%) -->
+      <aside class="col-md-3 bg-light p-3">
+        <ul class="list-group menu">
+          <li class="list-group-item"><a  href="./examples/intro.html">Introduction</a></li>
+          <li class="list-group-item"><a  href="./examples/Installation.html">Installation </a></li>
+          <li class="list-group-item"><a  href="./examples/MF1.html">Advanced </a></li>
+          <li class="list-group-item"><a  href="./examples/basic.html">Item </a></li>
+        </ul>
+      </aside>
+
+      <!-- Main Content (70%) -->
+      <main class="col-md-9 bg-white p-3">
+        <partial src="./examples/intro.html" id="view" onload="__initBindings">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><linearGradient id="a5"><stop offset="0" stop-color="#2416FF" stop-opacity="0"></stop><stop offset="1" stop-color="#2416FF"></stop></linearGradient><circle fill="none" stroke="url(#a5)" stroke-width="15" stroke-linecap="round" stroke-dasharray="0 44 0 44 0 44 0 44 0 360" cx="100" cy="100" r="70" transform-origin="center"><animateTransform type="rotate" attributeName="transform" calcMode="discrete" dur="2" values="360;324;288;252;216;180;144;108;72;36" repeatCount="indefinite"></animateTransform></circle></svg>
+        </partial>
+      </main>
     </div>
 
-    <script src="./js/partial.js"></script>
+    <!-- Footer -->
+    <footer class="row bg-secondary text-white p-3 mt-auto">
+      <div class="col-12">
+        Developed by Darshan Marathe
+      </div>
+    </footer>
+  </div>
 
-    <script>
+  <script src="./bindings.js" async> </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/9000.0.1/prism.min.js" integrity="sha512-UOoJElONeUNzQbbKQbjldDf9MwOHqxNz49NNJJ1d90yp+X9edsHyJoAs6O4K19CZGaIdjI5ohK+O2y5lBTW6uQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-        $(function () {
-            $('.menu a').click(function (e) {
-                e.preventDefault();
-                var path = $(this).prop('href');
-                var container = document.getElementById('view');
-                partial.getPage(path, container, function (elem) {
-                    __initBindings();
-                    Prism.highlightAll();
-                });
-                $('.active').removeClass('active');
-                $(this).addClass('active');
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-            });
+  <script src="./js/partial.js"></script>
 
-        });
-    </script>
+  <script>
+
+      $(function () {
+          $('.menu a').click(function (e) {
+              e.preventDefault();
+              var path = $(this).prop('href');
+              var container = document.getElementById('view');
+              partial.getPage(path, container, function (elem) {
+                  __initBindings();
+                  Prism.highlightAll();
+              });
+              $('.active').removeClass('active');
+              $(this).addClass('active');
+
+          });
+
+      });
+  </script>
+
 </body>
-
 </html>
