did more changes

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         </h1></div>
           <div class="header-links">
 
-            <a class="text-white ml-3" href="https://github.com/darshanmarathe/bindingjs">Github</a>
+            <a class="text-white ml-3" href="https://github.com/darshanmarathe/bindingsjs">Github</a>
             <a class="text-white ml-3" href="https://github.com/darshanmarathe">My profile</a>
-            <a class="text-white ml-3" href="#">Learning</a>
+            <a class="text-white ml-3" href="/leasrning.html">Learning</a>
           </div>
         </div>
       </header>
@@ -44,7 +44,13 @@
           <li class="list-group-item"><a  href="./examples/intro.html">Introduction</a></li>
           <li class="list-group-item"><a  href="./examples/Installation.html">Installation </a></li>
           <li class="list-group-item"><a  href="./examples/MF1.html">Advanced </a></li>
-          <li class="list-group-item"><a  href="./examples/basic.html">Item </a></li>
+          <li class="list-group-item"><a  href="./examples/DeepProperties.html">Deeep Properties </a></li>
+          <li class="list-group-item"><a  href="./examples/Target_Format.html">Target Format </a></li>
+          <li class="list-group-item"><a  href="./examples/Append_Target.html">Append Target </a></li>
+          <li class="list-group-item"><a  href="./examples/Complex_Objects.html">Complex Objects </a></li>
+          <li class="list-group-item"><a  href="./examples/Pipe_To_Function.html">Pipe To Function </a></li>
+          <li class="list-group-item"><a  href="./examples/Videos.html">Videos </a></li>
+          <!-- <li class="list-group-item"><a  href="./examples/Item.html">Item </a></li> -->
         </ul>
       </aside>
 
@@ -82,7 +88,7 @@
               var container = document.getElementById('view');
               partial.getPage(path, container, function (elem) {
                   __initBindings();
-                  Prism.highlightAll();
+                  //Prism.highlightAll();
               });
               $('.active').removeClass('active');
               $(this).addClass('active');
