--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <!-- Sidebar (30%) -->
       <aside class="col-md-3 bg-light p-3">
         <ul class="list-group menu">
-          <li class="list-group-item"><a  href="./examples/intro.html">Introduction</a></li>
+          <li class="list-group-item active"><a class="text-white" href="./examples/intro.html">Introduction</a></li>
           <li class="list-group-item"><a  href="./examples/Installation.html">Installation </a></li>
           <li class="list-group-item"><a  href="./examples/MF1.html">Advanced </a></li>
           <li class="list-group-item"><a  href="./examples/DeepProperties.html">Deeep Properties </a></li>
@@ -88,10 +88,12 @@
               var container = document.getElementById('view');
               partial.getPage(path, container, function (elem) {
                   __initBindings();
-                  //Prism.highlightAll();
+                  Prism.highlightAll();
               });
+              $('.list-group-item a').removeClass('text-white')
               $('.active').removeClass('active');
-              $(this).addClass('active');
+              $(this).parent().addClass('active');
+              $(this).addClass('text-white')
 
           });
 
