--- a/examples/intro.html
+++ b/examples/intro.html
@@ -54,7 +54,7 @@ Your First Name is :
 
 
 <pre class="language-html">
-  <code class="language html">
+  <code class="language-html">
     
 &lt;bindings&gt;
 &lt;binding source="#red" event="change" target=".box" property="style.backgroundColor" targetFormat='rgb(0 ,0 ,{0})' /&gt;
