--- a/examples/DeepProperties.html
+++ b/examples/DeepProperties.html
@@ -1,1 +1,25 @@
-DeepProperties.html
+<input type="range" name="input" id="input" min="0" max="100" value="50">
+
+<div id="output">
+
+    slide range to change my size.
+</div>
+
+<bindings>
+    <binding source="#input" event="change" target="#output" property="style.height" targetFormat="{0}%"/>
+
+    <binding source="#input" event="change" target="#output" property="style.width" targetFormat="{0}%"/>
+</bindings>
+
+<style>
+    #output{
+        border: 1px solid black;
+        border-radius: 10px;
+        padding: 10px;
+        text-align: center;
+        vertical-align: middle;
+        margin: 10px;
+        height: 50%;
+        width: 50%;
+    }
+</style>
