--- a/examples/intro.html
+++ b/examples/intro.html
@@ -12,7 +12,7 @@
 <div class="col-span-full sm:col-span-3 text-left">
   <label for="sourceIn" class="text-sm">First name</label>
   <input id="sourceIn" type="text" placeholder="First name" style="color: black;"
-    class="w-full rounded-md focus:ring focus:ring-opacity-75 dark:text-black-50 focus:dark:ring-violet-600 dark:border-gray-300">
+    class="form-control"> #sourceIn
 </div>
 
 
@@ -20,7 +20,7 @@
 
 Your First Name is :
 <span id="targeOut">
-</span>
+</span> #targeOut
 
 
 <pre class="language-html">
