--- a/examples/intro.html
+++ b/examples/intro.html
@@ -5,6 +5,7 @@
     width: 200px;
     border: 1px solid black;
     background-color: rgb(250, 0, 0);
+    color: white;
   }
   #targeOut{
     color: red;
