--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
           <li class="list-group-item active"><a class="text-white" href="./examples/intro.html">Introduction</a></li>
           <li class="list-group-item"><a  href="./examples/Installation.html">Installation </a></li>
           <li class="list-group-item"><a  href="./examples/MF1.html">Advanced </a></li>
+          <li class="list-group-item"><a  href="./examples/signals.html">Signals </a></li>
           <li class="list-group-item"><a  href="./examples/DeepProperties.html">Deeep Properties </a></li>
           <li class="list-group-item"><a  href="./examples/Target_Format.html">Target Format </a></li>
           <li class="list-group-item"><a  href="./examples/Append_Target.html">Append Target </a></li>
