--- a/examples/Target_Format.html
+++ b/examples/Target_Format.html
@@ -18,7 +18,7 @@ My Name is <span id="fullName">
     <binding source="#firstName" x-model="FirstName" event="input" target="#fullName"
              property="innerHTML" targetformat="{FirstName} {MiddleName} {LastName}" ></binding>
 
-    <binding source="#middleName" x-model="MiddleName" event="input" target="#fullName"
+    <binding source="#middleName" x-model="MiddleName" evePnt="input" target="#fullName"
              property="innerHTML" targetformat="{FirstName} {MiddleName} {LastName}" ></binding>
 
     <binding source="#lastName" x-model="LastName" event="input" target="#fullName"
