--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
       <!-- Main Content (70%) -->
       <main class="col-md-9 bg-white p-3">
-        <partial src="./examples/intro.html" id="view" onload="__initBindings">
+        <partial src="./examples/Complex_Objects.html" id="view" onload="__initBindings">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><linearGradient id="a5"><stop offset="0" stop-color="#2416FF" stop-opacity="0"></stop><stop offset="1" stop-color="#2416FF"></stop></linearGradient><circle fill="none" stroke="url(#a5)" stroke-width="15" stroke-linecap="round" stroke-dasharray="0 44 0 44 0 44 0 44 0 360" cx="100" cy="100" r="70" transform-origin="center"><animateTransform type="rotate" attributeName="transform" calcMode="discrete" dur="2" values="360;324;288;252;216;180;144;108;72;36" repeatCount="indefinite"></animateTransform></circle></svg>
         </partial>
       </main>
@@ -79,7 +79,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
   <script src="./js/partial.js"></script>
-
+  <script type="module" src="js/wshop/index.js"></script>
   <script>
 
       $(function () {
