work in progress for cart

--- a/examples/Complex_Objects.html
+++ b/examples/Complex_Objects.html
@@ -8,6 +8,7 @@
     <div class="col-md-12 p-3 border">
         
             <pre class="language-html">
+                <h2>No Javascript written to bind item List / Item details / Cart component</h2>
 &lt;bindings&gt;<br>    &lt;binding source="#list" x-model="watch" event="watch-selected" target="#detail"<br>    property="watch" object  &gt;&lt;/binding&gt;<br>    &lt;binding source="#list" event="add-to-cart" target="#cart"<br>    property="newWatch" object  &gt;&lt;/binding&gt;<br>    &lt;binding source="#detail" event="add-to-cart" target="#cart"<br>    property="newWatch" object  &gt;&lt;/binding&gt;<br>&lt;/bindings&gt;<br>
             </pre>
       </div>
