--- a/examples/Complex_Objects.html
+++ b/examples/Complex_Objects.html
@@ -40,6 +40,8 @@
     property="watch" object  ></binding>
     <binding source="#list" event="add-to-cart" target="#cart"
     property="newWatch" object  ></binding>
+    <binding source="#list" event="add-to-cart" target="#detail"
+    property="watch" object  ></binding>
     <binding source="#detail" event="add-to-cart" target="#cart"
     property="newWatch" object  ></binding>
 </bindings>
