work in progress for cart

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </footer>
   </div>
 
-  <script src="./bindings.js" async> </script>
+  <script src="./bindings.js"> </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/9000.0.1/prism.min.js" integrity="sha512-UOoJElONeUNzQbbKQbjldDf9MwOHqxNz49NNJJ1d90yp+X9edsHyJoAs6O4K19CZGaIdjI5ohK+O2y5lBTW6uQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
