--- a/examples/Complex_Objects.html
+++ b/examples/Complex_Objects.html
@@ -9,8 +9,8 @@
         
             <pre class="language-html">
                 <h2>No Javascript written to bind item List / Item details / Cart component</h2>
-                &lt;bindings&gt;<br>    &lt;binding source="#list" x-model="watch" event="watch-selected" target="#detail"<br>    property="watch" object  &gt;&lt;/binding&gt;<br>    &lt;binding source="#list" event="add-to-cart" target="#cart"<br>    property="newWatch" object  &gt;&lt;/binding&gt;<br>    &lt;binding source="#list" event="add-to-cart" target="#detail"<br>    property="watch" object  &gt;&lt;/binding&gt;<br>    &lt;binding source="#detail" event="add-to-cart" target="#cart"<br>    property="newWatch" object  &gt;&lt;/binding&gt;<br>&lt;/bindings&gt;
-                        </pre>
+                &lt;bindings&gt;<br> &lt;binding source="#list" x-model="watch" event="watch-selected" target="#detail"<br> property="watch" object &gt;&lt;/binding&gt;<br> &lt;binding source="#list" event="add-to-cart" target="#cart"<br> property="newWatch" object &gt;&lt;/binding&gt;<br> &lt;binding source="#list" event="add-to-cart" target="#detail"<br> property="watch" object &gt;&lt;/binding&gt;<br> &lt;binding source="#detail" event="add-to-cart" target="#cart"<br> property="newWatch" object &gt;&lt;/binding&gt;<br> &lt;binding source="#cart" event="checkout" target="#cart"<br> pipe="onCheckout" object &gt;&lt;/binding&gt;<br>&lt;/bindings&gt;=
+            </pre>
       </div>
     </div>
 
